src/PSCParser.g4
parser grammar PSCParser;
options {
	tokenVocab = PSCLexer;
}

program: subprogram* stmts? EOF;

addOp: PLUS | MINUS;
mulOp: MULTIPLY | DIVIDE | MODULO;
expOp: EXPONENT;
compOp: EQUAL | NEQUAL | GT | LT | GTEQ | LTEQ;

// Expression and literals

expr: orExpr;
orExpr: andExpr (OR andExpr)*;
andExpr: compExpr (AND compExpr)*;
compExpr: addExpr (compOp addExpr)*;
addExpr: mulExpr (addOp mulExpr)*;
mulExpr: expExpr (mulOp expExpr)*;
expExpr: unaryExpr (expOp unaryExpr)*;
unaryExpr: (PLUS | MINUS)* notExpr;
notExpr: NOT* primaryExpr;
primaryExpr: groupExpr | primaryExpr LSQUARE expr (COMMA expr)* RSQUARE | primaryExpr LPAREN (expr (COMMA expr)*)? RPAREN;
groupExpr: atom | (LPAREN expr RPAREN);
atom: lits | ID;

lits: intLits | floatLits | arrayLits | STRING | BOOLEAN | NULL;
intLits: MINUS? INTEGER;
floatLits: MINUS? FLOAT;
arrayLits: LSQUARE (expr (COMMA expr)*)? RSQUARE;

// Statements
stmts: NEWLINE* stmt (NEWLINE+ stmt)* NEWLINE*;

stmt:
	expr
	| ifStmt
	| whileStmt
	| doWhileStmt
	| repeatUntilStmt
	| forStmt
	| asmStmt
	| inputStmt
	| outputStmt
	| returnStmt;

block:
	INDENT stmts DEDENT;

ifStmt: IF expr NEWLINE block (NEWLINE ELSE ifStmt | NEWLINE ELSE NEWLINE block)?;

whileStmt: WHILE expr NEWLINE block;
doWhileStmt: DO NEWLINE block NEWLINE WHILE expr;

repeatUntilStmt: REPEAT NEWLINE block NEWLINE UNTIL expr;

forStmt: FOR ID FROM expr DOWN? TO expr NEWLINE block;

asmStmt: lvalue ASSIGN expr;

lvalue: ID | lvalue LSQUARE expr (COMMA expr)* RSQUARE;

// IO statements
inputStmt: INPUT lvalue;
outputStmt: OUTPUT expr;

// Subprogram
subprogram: SUBPROGRAM ID LPAREN (ID (COMMA ID)*)? RPAREN NEWLINE block;

returnStmt: RETURN expr;
