src/antlr/PSCParser.ts
// Generated from ./PSCParser.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import PSCParserVisitor from "./PSCParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class PSCParser extends Parser {
	public static readonly INDENT = 1;
	public static readonly DEDENT = 2;
	public static readonly WHITESPACE = 3;
	public static readonly NEWLINE = 4;
	public static readonly COMMENT = 5;
	public static readonly COMMA = 6;
	public static readonly LPAREN = 7;
	public static readonly RPAREN = 8;
	public static readonly LSQUARE = 9;
	public static readonly RSQUARE = 10;
	public static readonly SQUOTE = 11;
	public static readonly DQUOTE = 12;
	public static readonly STRING = 13;
	public static readonly INTEGER = 14;
	public static readonly FLOAT = 15;
	public static readonly BOOLEAN = 16;
	public static readonly PLUS = 17;
	public static readonly MINUS = 18;
	public static readonly MULTIPLY = 19;
	public static readonly DIVIDE = 20;
	public static readonly MODULO = 21;
	public static readonly EXPONENT = 22;
	public static readonly AND = 23;
	public static readonly OR = 24;
	public static readonly NOT = 25;
	public static readonly EQUAL = 26;
	public static readonly NEQUAL = 27;
	public static readonly GT = 28;
	public static readonly LT = 29;
	public static readonly GTEQ = 30;
	public static readonly LTEQ = 31;
	public static readonly IF = 32;
	public static readonly ELSE = 33;
	public static readonly WHILE = 34;
	public static readonly DO = 35;
	public static readonly REPEAT = 36;
	public static readonly UNTIL = 37;
	public static readonly FOR = 38;
	public static readonly FROM = 39;
	public static readonly DOWN = 40;
	public static readonly TO = 41;
	public static readonly ASSIGN = 42;
	public static readonly INPUT = 43;
	public static readonly OUTPUT = 44;
	public static readonly ID = 45;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_addOp = 1;
	public static readonly RULE_mulOp = 2;
	public static readonly RULE_expOp = 3;
	public static readonly RULE_compOp = 4;
	public static readonly RULE_expr = 5;
	public static readonly RULE_orExpr = 6;
	public static readonly RULE_andExpr = 7;
	public static readonly RULE_compExpr = 8;
	public static readonly RULE_addExpr = 9;
	public static readonly RULE_mulExpr = 10;
	public static readonly RULE_expExpr = 11;
	public static readonly RULE_unaryExpr = 12;
	public static readonly RULE_notExpr = 13;
	public static readonly RULE_primaryExpr = 14;
	public static readonly RULE_groupExpr = 15;
	public static readonly RULE_atom = 16;
	public static readonly RULE_lits = 17;
	public static readonly RULE_intLits = 18;
	public static readonly RULE_floatLits = 19;
	public static readonly RULE_arrayLits = 20;
	public static readonly RULE_stmts = 21;
	public static readonly RULE_stmt = 22;
	public static readonly RULE_block = 23;
	public static readonly RULE_ifStmt = 24;
	public static readonly RULE_whileStmt = 25;
	public static readonly RULE_doWhileStmt = 26;
	public static readonly RULE_repeatUntilStmt = 27;
	public static readonly RULE_forStmt = 28;
	public static readonly RULE_asmStmt = 29;
	public static readonly RULE_inputStmt = 30;
	public static readonly RULE_outputStmt = 31;
	public static readonly literalNames: (string | null)[] = [ null, null, 
                                                            null, null, 
                                                            null, null, 
                                                            "','", "'('", 
                                                            "')'", "'['", 
                                                            "']'", "'''", 
                                                            "'\"'", null, 
                                                            null, null, 
                                                            null, "'+'", 
                                                            "'-'", "'*'", 
                                                            "'/'", null, 
                                                            null, "'and'", 
                                                            "'or'", "'not'", 
                                                            "'='", "'<>'", 
                                                            "'>'", "'<'", 
                                                            "'>='", "'<='", 
                                                            "'if'", "'else'", 
                                                            "'while'", "'do'", 
                                                            "'repeat'", 
                                                            "'until'", "'for'", 
                                                            "'from'", "'down'", 
                                                            "'to'", "'<-'", 
                                                            "'input'", "'output'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "INDENT", 
                                                             "DEDENT", "WHITESPACE", 
                                                             "NEWLINE", 
                                                             "COMMENT", 
                                                             "COMMA", "LPAREN", 
                                                             "RPAREN", "LSQUARE", 
                                                             "RSQUARE", 
                                                             "SQUOTE", "DQUOTE", 
                                                             "STRING", "INTEGER", 
                                                             "FLOAT", "BOOLEAN", 
                                                             "PLUS", "MINUS", 
                                                             "MULTIPLY", 
                                                             "DIVIDE", "MODULO", 
                                                             "EXPONENT", 
                                                             "AND", "OR", 
                                                             "NOT", "EQUAL", 
                                                             "NEQUAL", "GT", 
                                                             "LT", "GTEQ", 
                                                             "LTEQ", "IF", 
                                                             "ELSE", "WHILE", 
                                                             "DO", "REPEAT", 
                                                             "UNTIL", "FOR", 
                                                             "FROM", "DOWN", 
                                                             "TO", "ASSIGN", 
                                                             "INPUT", "OUTPUT", 
                                                             "ID" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "addOp", "mulOp", "expOp", "compOp", "expr", "orExpr", "andExpr", 
		"compExpr", "addExpr", "mulExpr", "expExpr", "unaryExpr", "notExpr", "primaryExpr", 
		"groupExpr", "atom", "lits", "intLits", "floatLits", "arrayLits", "stmts", 
		"stmt", "block", "ifStmt", "whileStmt", "doWhileStmt", "repeatUntilStmt", 
		"forStmt", "asmStmt", "inputStmt", "outputStmt",
	];
	public get grammarFileName(): string { return "PSCParser.g4"; }
	public get literalNames(): (string | null)[] { return PSCParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return PSCParser.symbolicNames; }
	public get ruleNames(): string[] { return PSCParser.ruleNames; }
	public get serializedATN(): number[] { return PSCParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, PSCParser._ATN, PSCParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, PSCParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 65;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 34071184) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 14429) !== 0)) {
				{
				this.state = 64;
				this.stmts();
				}
			}

			this.state = 67;
			this.match(PSCParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public addOp(): AddOpContext {
		let localctx: AddOpContext = new AddOpContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, PSCParser.RULE_addOp);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 69;
			_la = this._input.LA(1);
			if(!(_la===17 || _la===18)) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public mulOp(): MulOpContext {
		let localctx: MulOpContext = new MulOpContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, PSCParser.RULE_mulOp);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 71;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 3670016) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expOp(): ExpOpContext {
		let localctx: ExpOpContext = new ExpOpContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, PSCParser.RULE_expOp);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 73;
			this.match(PSCParser.EXPONENT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public compOp(): CompOpContext {
		let localctx: CompOpContext = new CompOpContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, PSCParser.RULE_compOp);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 75;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 4227858432) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expr(): ExprContext {
		let localctx: ExprContext = new ExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, PSCParser.RULE_expr);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 77;
			this.orExpr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public orExpr(): OrExprContext {
		let localctx: OrExprContext = new OrExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, PSCParser.RULE_orExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 79;
			this.andExpr();
			this.state = 84;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===24) {
				{
				{
				this.state = 80;
				this.match(PSCParser.OR);
				this.state = 81;
				this.andExpr();
				}
				}
				this.state = 86;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public andExpr(): AndExprContext {
		let localctx: AndExprContext = new AndExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, PSCParser.RULE_andExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 87;
			this.compExpr();
			this.state = 92;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===23) {
				{
				{
				this.state = 88;
				this.match(PSCParser.AND);
				this.state = 89;
				this.compExpr();
				}
				}
				this.state = 94;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public compExpr(): CompExprContext {
		let localctx: CompExprContext = new CompExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, PSCParser.RULE_compExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 95;
			this.addExpr();
			this.state = 101;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4227858432) !== 0)) {
				{
				{
				this.state = 96;
				this.compOp();
				this.state = 97;
				this.addExpr();
				}
				}
				this.state = 103;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public addExpr(): AddExprContext {
		let localctx: AddExprContext = new AddExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, PSCParser.RULE_addExpr);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 104;
			this.mulExpr();
			this.state = 110;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 105;
					this.addOp();
					this.state = 106;
					this.mulExpr();
					}
					}
				}
				this.state = 112;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 4, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public mulExpr(): MulExprContext {
		let localctx: MulExprContext = new MulExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, PSCParser.RULE_mulExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 113;
			this.expExpr();
			this.state = 119;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 3670016) !== 0)) {
				{
				{
				this.state = 114;
				this.mulOp();
				this.state = 115;
				this.expExpr();
				}
				}
				this.state = 121;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expExpr(): ExpExprContext {
		let localctx: ExpExprContext = new ExpExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, PSCParser.RULE_expExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 122;
			this.unaryExpr();
			this.state = 128;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===22) {
				{
				{
				this.state = 123;
				this.expOp();
				this.state = 124;
				this.unaryExpr();
				}
				}
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public unaryExpr(): UnaryExprContext {
		let localctx: UnaryExprContext = new UnaryExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, PSCParser.RULE_unaryExpr);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 134;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 131;
					_la = this._input.LA(1);
					if(!(_la===17 || _la===18)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					}
					}
				}
				this.state = 136;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 7, this._ctx);
			}
			this.state = 137;
			this.notExpr();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public notExpr(): NotExprContext {
		let localctx: NotExprContext = new NotExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, PSCParser.RULE_notExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===25) {
				{
				{
				this.state = 139;
				this.match(PSCParser.NOT);
				}
				}
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 145;
			this.primaryExpr(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}

	public primaryExpr(): PrimaryExprContext;
	public primaryExpr(_p: number): PrimaryExprContext;
	// @RuleVersion(0)
	public primaryExpr(_p?: number): PrimaryExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let localctx: PrimaryExprContext = new PrimaryExprContext(this, this._ctx, _parentState);
		let _prevctx: PrimaryExprContext = localctx;
		let _startState: number = 28;
		this.enterRecursionRule(localctx, 28, PSCParser.RULE_primaryExpr, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			{
			this.state = 148;
			this.groupExpr();
			}
			this._ctx.stop = this._input.LT(-1);
			this.state = 157;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 9, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = localctx;
					{
					{
					localctx = new PrimaryExprContext(this, _parentctx, _parentState);
					this.pushNewRecursionContext(localctx, _startState, PSCParser.RULE_primaryExpr);
					this.state = 150;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 151;
					this.match(PSCParser.LSQUARE);
					this.state = 152;
					this.expr();
					this.state = 153;
					this.match(PSCParser.RSQUARE);
					}
					}
				}
				this.state = 159;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 9, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return localctx;
	}
	// @RuleVersion(0)
	public groupExpr(): GroupExprContext {
		let localctx: GroupExprContext = new GroupExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, PSCParser.RULE_groupExpr);
		try {
			this.state = 165;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 9:
			case 13:
			case 14:
			case 15:
			case 16:
			case 18:
			case 45:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 160;
				this.atom();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 2);
				{
				{
				this.state = 161;
				this.match(PSCParser.LPAREN);
				this.state = 162;
				this.expr();
				this.state = 163;
				this.match(PSCParser.RPAREN);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public atom(): AtomContext {
		let localctx: AtomContext = new AtomContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, PSCParser.RULE_atom);
		try {
			this.state = 169;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 9:
			case 13:
			case 14:
			case 15:
			case 16:
			case 18:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 167;
				this.lits();
				}
				break;
			case 45:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 168;
				this.match(PSCParser.ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public lits(): LitsContext {
		let localctx: LitsContext = new LitsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, PSCParser.RULE_lits);
		try {
			this.state = 176;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 171;
				this.intLits();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 172;
				this.floatLits();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 173;
				this.arrayLits();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 174;
				this.match(PSCParser.STRING);
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 175;
				this.match(PSCParser.BOOLEAN);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public intLits(): IntLitsContext {
		let localctx: IntLitsContext = new IntLitsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, PSCParser.RULE_intLits);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 179;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===18) {
				{
				this.state = 178;
				this.match(PSCParser.MINUS);
				}
			}

			this.state = 181;
			this.match(PSCParser.INTEGER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public floatLits(): FloatLitsContext {
		let localctx: FloatLitsContext = new FloatLitsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, PSCParser.RULE_floatLits);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 184;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===18) {
				{
				this.state = 183;
				this.match(PSCParser.MINUS);
				}
			}

			this.state = 186;
			this.match(PSCParser.FLOAT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arrayLits(): ArrayLitsContext {
		let localctx: ArrayLitsContext = new ArrayLitsContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, PSCParser.RULE_arrayLits);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 188;
			this.match(PSCParser.LSQUARE);
			this.state = 197;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 34071168) !== 0) || _la===45) {
				{
				this.state = 189;
				this.expr();
				this.state = 194;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===6) {
					{
					{
					this.state = 190;
					this.match(PSCParser.COMMA);
					this.state = 191;
					this.expr();
					}
					}
					this.state = 196;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}
